--- a/express/package.json
+++ b/express/package.json
@@ -1,29 +1,13 @@
 {
   "devDependencies": {
-    "@babel/core": "^7.21.8",
-    "@babel/node": "^7.20.7",
-    "@babel/preset-env": "^7.21.5",
     "@types/express": "^4.17.17",
-    "@types/node": "^20.2.2",
-    "nodemon": "^2.0.22",
-    "prisma": "^4.14.1",
-    "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   },
   "scripts": {
-    "dev": "NODE_ENV=development ./node_modules/.bin/ts-node src/server.ts"
+    "start": "tsc && node dist/server.js"
   },
   "dependencies": {
-    "@prisma/client": "^4.14.1",
     "express": "^4.18.2",
-    "mysql": "^2.18.1",
     "sqlite3": "^5.1.6"
-  },
-  "name": "express",
-  "version": "1.0.0",
-  "main": "main.js",
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  }
 }
