--- a/fetchAPI/express/package.json
+++ b/fetchAPI/express/package.json
@@ -1,8 +1,9 @@
 {
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^20.2.5",
-    "typescript": "^5.0.4"
+    "typescript": "^5.1.3"
   },
   "scripts": {
     "start": "tsc && node dist/server.js"
